--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,10 +21,9 @@ install:
   - ps: $env:DOTNET_SKIP_FIRST_TIME_EXPERIENCE = "true"
 
 build_script:
-- dotnet restore .\src\NETStandard.HttpListener -v Minimal
-- dotnet restore .\src\TestConsoleApp -v Minimal
-# - nuget restore .\src\TestApp\TestApp.csproj -PackagesDirectory packages
-- dotnet restore .\test\NETStandard.HttpListener.Tests -v Minimal
+- dotnet restore .\src\NETStandard.HttpListener\NETStandard.HttpListener.csproj
+- dotnet restore .\src\TestConsoleApp\TestConsoleApp.csproj
+- dotnet restore .\test\NETStandard.HttpListener.Tests\NETStandard.HttpListener.Tests.csproj
 
 - dotnet build .\src\NETStandard.HttpListener\NETStandard.HttpListener.csproj -c %CONFIGURATION%
 - dotnet build .\src\TestConsoleApp\TestConsoleApp.csproj -c %CONFIGURATION%
