--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ os: Visual Studio 2017
 version: 1.0.2.{build}
 
 configuration:
-- Release
+- Debug
 
 platform: Any CPU
 
@@ -41,9 +41,3 @@ after_test:
   - cmd: '"OpenCover\tools\OpenCover.Console.exe" -target:dotnet.exe -targetargs:"test test\NETStandard.HttpListener.Tests\NETStandard.HttpListener.Tests.csproj --configuration %CONFIGURATION%  --no-build" -output:coverage.xml -register:user -filter:"+[NETStandard.HttpListener]* -[NETStandard.HttpListener.Tests]*" -returntargetcode -register:user -oldstyle'
   - codecov -f "coverage.xml"
   - coveralls.net\tools\csmacnz.Coveralls.exe --opencover -i .\coverage.xml
-
-artifacts:
-- path: artifacts\**\*.*
-
-cache:
-- packages
