--- a/src/NETStandard.HttpListener/NETStandard.HttpListener.csproj
+++ b/src/NETStandard.HttpListener/NETStandard.HttpListener.csproj
@@ -15,6 +15,7 @@
     <PackageLicenseUrl>https://raw.githubusercontent.com/StefH/NETStandard.HttpListener/master/LICENSE</PackageLicenseUrl>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.3' ">$(PackageTargetFallback);dotnet5.4</PackageTargetFallback>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <DebugType>full</DebugType>
   </PropertyGroup>
   
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
