--- a/src/NETStandard.HttpListener/NETStandard.HttpListener.csproj
+++ b/src/NETStandard.HttpListener/NETStandard.HttpListener.csproj
@@ -4,13 +4,13 @@
     <Description>HttpListener for .NET Core (NETStandard) and Universal Windows Platform (UWP)</Description>
     <Copyright>Copyright © Robert Sundström 2016, Stef Heyenrath 2017</Copyright>
     <AssemblyTitle>NETStandard.HttpListener</AssemblyTitle>
-    <VersionPrefix>1.0.2.0</VersionPrefix>
+    <VersionPrefix>1.0.3.0</VersionPrefix>
     <Authors>Robert Sundström;Stef Heyenrath</Authors>
     <TargetFrameworks>netstandard1.3</TargetFrameworks>
     <AssemblyName>NETStandard.HttpListener</AssemblyName>
     <PackageId>NETStandard.HttpListener</PackageId>
     <PackageTags>Http;Web Server;HttpListener;NetStandard;.NET Core</PackageTags>
-    <PackageReleaseNotes>Fixed a bug in HttpListenerRequest</PackageReleaseNotes>
+    <PackageReleaseNotes>Fixed header parsing and a memory leak using StringBuilder.</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/StefH/NETStandard.HttpListener</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.githubusercontent.com/StefH/NETStandard.HttpListener/master/LICENSE</PackageLicenseUrl>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.3' ">$(PackageTargetFallback);dotnet5.4</PackageTargetFallback>
@@ -27,7 +27,7 @@
     <NugetTargetMoniker>UAP,Version=v10.0</NugetTargetMoniker>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.14393.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.14393.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.10240.0</TargetPlatformMinVersion>
     <TargetFrameworkIdentifier>.NETCore</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
     <DefineConstants>WINDOWS_UWP;UAP10_0</DefineConstants>
@@ -43,12 +43,6 @@
   <ItemGroup Condition=" '$(TargetFramework)' == 'uap10.0' ">
     <PackageReference Include="NETStandard.Library" Version="1.6.1" />
     <PackageReference Include="System.Reflection" Version="4.3.0" />
-    <!--<PackageReference Include="System.Collections" Version="4.3.0" />
-    <PackageReference Include="System.IO" Version="4.3.0" />
-    <PackageReference Include="System.Linq" Version="4.3.0" />
-    <PackageReference Include="System.Runtime.Extensions" Version="4.3.0" />
-    <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
-    <PackageReference Include="System.Threading.Tasks" Version="4.3.0" />-->
   </ItemGroup>
 
 </Project>
