fix appveyor build

--- a/.axoCover/settings.json
+++ b/.axoCover/settings.json
@@ -2,6 +2,8 @@
   "TestRunner": "",
   "TestPlatform": "x86",
   "TestApartmentState": "STA",
+  "TestAdapterMode": "Standard",
+  "IsRedirectingFrameworkAssemblies": true,
   "TestSettings": "",
   "ExcludeAttributes": "System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute",
   "ExcludeFiles": "",
