--- a/src/NETStandard.HttpListener/NETStandard.HttpListener.csproj
+++ b/src/NETStandard.HttpListener/NETStandard.HttpListener.csproj
@@ -4,13 +4,13 @@
     <Description>HttpListener for .NET Core (NETStandard) and Universal Windows Platform (UWP)</Description>
     <Copyright>Copyright © Robert Sundström 2016, Stef Heyenrath 2017</Copyright>
     <AssemblyTitle>NETStandard.HttpListener</AssemblyTitle>
-    <VersionPrefix>1.0.3.0</VersionPrefix>
+    <VersionPrefix>1.0.3.1</VersionPrefix>
     <Authors>Robert Sundström;Stef Heyenrath</Authors>
     <TargetFrameworks>netstandard1.3</TargetFrameworks>
     <AssemblyName>NETStandard.HttpListener</AssemblyName>
     <PackageId>NETStandard.HttpListener</PackageId>
     <PackageTags>Http;Web Server;HttpListener;NetStandard;.NET Core</PackageTags>
-    <PackageReleaseNotes>Fixed header parsing and a memory leak using StringBuilder.</PackageReleaseNotes>
+    <PackageReleaseNotes>Fixed issue #12.</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/StefH/NETStandard.HttpListener</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.githubusercontent.com/StefH/NETStandard.HttpListener/master/LICENSE</PackageLicenseUrl>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.3' ">$(PackageTargetFallback);dotnet5.4</PackageTargetFallback>
